# QRegExpEditor

./: CMakeLists.txt  README.md  RegExpEditor.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  tst_regexp.cpp
